Remove unused argument from TaskManagerTableModel constructor.

The refresh types are determined by visible columns in
RetrieveSavedColumnsSettingsAndUpdateTable. The refresh types passed in the
constructor for TaskManagerTableModel have no effect.

Bug: 772560
Change-Id: I0eee9449c30d90a596cb80e435293becd0579116